--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,7 +16,6 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">A propos</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ path('app_contact') }}">Contactez moi</a></li>
                     </ul>
                 </div>
             </div>
@@ -204,7 +203,7 @@
                                     <p class="mb-4">En utilisant notre site, les habitants peuvent rester informés et participatifs dans la vie de leur commune. Nous espérons que cet outil sera utile pour renforcer la communication entre les citoyens et leurs élus municipaux et pour améliorer la qualité de vie dans notre ville.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -223,7 +222,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Preview Trip'o'advisor</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Trip'O'advisor</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -233,10 +232,14 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tripoadvisor.png" alt="Tripoadvisor" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">Trip O'dvisor est un projet que j'ai réalisé durant ma formation. Il reprend le principe de Tripadvisor, en proposant une plateforme de avis et de recommandations pour les voyageurs. Mon objectif était de dynamiser le site et de proposer une expérience utilisateur unique.</p>
+
+                                    <p class="mb-4">Pour atteindre cet objectif, j'ai mis en place plusieurs fonctionnalités. Tout d'abord, j'ai créé un système de newsletter dynamique pour permettre aux utilisateurs de recevoir des recommandations de voyage personnalisées. J'ai également proposé différents thèmes pour personnaliser l'apparence du site et l'expérience utilisateur. Enfin, j'ai ajouté un carroussel d'images pour mettre en avant les destinations recommandées.</p>
+
+                                    <p class="mb-4">Langages : JavaScript, html et css</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        Fermer 
                                     </button>
                                 </div>
                             </div>
@@ -263,12 +266,16 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wireframes.png" alt="Wireframes recettes" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/wireframes.png" alt="Wireframes O'Delice" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">Le wireframe que je vous présente a été réalisé dans le cadre d'un projet de développement web. Il s'agit d'une maquette simplifiée qui permet de visualiser l'agencement des éléments sur une page web.</p>
+
+                                    <p class="mb-4">Le wireframe que je vous présente a été conçu pour être le plus simple et le plus clair possible. Il permet de se concentrer sur l'essentiel et d'éviter de se perdre dans les détails. Grâce à ce wireframe, j'ai pu avoir une vue d'ensemble du projet et définir les fonctionnalités clés de la page.</p>
+
+                                    <p class="mb-4">En utilisant ce wireframe, j'ai pu rapidement tester différentes idées et iterations, ce qui m'a permis d'optimiser l'expérience utilisateur finale.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -297,10 +304,14 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/todolist.png" alt="Todo list" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                   <p class="mb-4">Le projet de Todolist que je vous présente dans mon portfolio a été réalisé dans le cadre de ma formation en développement web. Il s'agit d'une application permettant de gérer ses tâches quotidiennes de manière simple et intuitive.</p>
+
+                                    <p class="mb-4">Ce projet m'a permis de mieux comprendre le principe du DOM (Document Object Model), qui est une interface de programmation pour les documents HTML et XML. J'ai appris à manipuler le DOM en JavaScript pour ajouter, supprimer et modifier des éléments dans une page web.</p>
+
+                                    <p class="mb-4">Grâce à ce projet, j'ai pu acquérir de solides compétences et j'ai pu mettre en pratique mes connaissances en HTML, CSS et JavaScript. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -329,10 +340,16 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/O'flix.png" alt="O'flix" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">O'flix est un projet de site de notation et d'avis pour les films et séries. Il a été développé en utilisant le framework Symfony 5.4.</p>
+
+                                    <p class="mb-4">Le projet O'flix m'a permis de manipuler une API pour récupérer les informations sur les films et séries, ainsi que les affiches associées. J'ai également utilisé des fixtures avant de disposer de l'API pour pouvoir travailler sur le développement du site.</p>
+
+                                    <p class="mb-4">J'ai également mis en place une gestion des utilisateurs et des commentaires en utilisant une base de données MySQL et son fork MariaDB.</p>
+
+                                    <p class="mb-4">Langages et technologies : Php et Symfony, MySQL (mariaDB)</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
@@ -351,7 +368,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">FAQ O'Question</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -359,12 +376,16 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Oquestion.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Oquestion.png" alt="FAQ preview" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">O'Question est un projet de site de FAQ. Il permet aux utilisateurs de poser des questions et de répondre aux questions des autres utilisateurs.</p>
+
+                                    <p class="mb-4">Le projet O'Question m'a permis de mettre en place un système d'archivage des questions et de balises pour indiquer si une question est en attente de réponse ou si elle a déjà été répondue. J'ai également développé la gestion des utilisateurs et le traitement des questions via une base de données.</p>
+
+                                    <p class="mb-4">Langages et technologies : Php et Symfony, mySQL (mariaDB)</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        Fermer
                                     </button>
                                 </div>
                             </div>
